feat: CUEでAPIを定義し、OpenAPIのyamlを生成する
